--- a/notebooks/sift1m_experiment.ipynb
+++ b/notebooks/sift1m_experiment.ipynb
@@ -73,7 +73,7 @@
     "graph_type = 'nsw'        # 'nsw' or 'nsg'\n",
     "M = 14                    # degree parameter for NSW (Max degree is 2*M)\n",
     "ef = 10                   # search algorithm parameter, sets the operating point\n",
-    "R = 16                    #  degree parameter for NSG (corresponds to max degree)\n",
+    "R = 16                    # degree parameter for NSG (corresponds to max degree)\n",
     "k = 10                    # Number of answers per query. Need for Recall@k\n",
     "\n",
     "assert k <= ef\n",
@@ -241,7 +241,7 @@
     "    if trainer.step % 20 == 0:\n",
     "        trainer.evaluate(*next(val_iterator), prefix='val')\n",
     "        \n",
-    "    if trainer.step % 100 == 0:\n",
+    "    if trainer.step % 50 == 0:\n",
     "        trainer.evaluate(*next(dev_iterator))\n",
     "        print(end=\"Saving...\")\n",
     "        torch.save(agent, \"runs/{}/agent.{}.pth\".format(exp_name, trainer.step))\n",
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_val_step = None\n",
+    "best_val_step = None  # Put the best val iteration multiple of 50\n",
     "\n",
     "if best_val_step is not None:\n",
     "    agent = torch.load(\"runs/{}/agent.{}.pth\".format(exp_name, best_val_step))\n",
@@ -314,7 +314,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "for heap_size in [1, 2, 3, 5, 10, 20, 30]:\n",
+    "for heap_size in [1, 2, 3, 5, 10, 20, 30, 40, 50]:\n",
     "    algo_hnsw = lib.BaseAlgorithm(\n",
     "        agent=agent,\n",
     "        hnsw=lib.ParallelHNSW(graph, ef=heap_size, k=k, n_jobs=n_jobs),\n",
