--- a/notebooks/sift100k_experiment.ipynb
+++ b/notebooks/sift100k_experiment.ipynb
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_val_step = None\n",
+    "best_val_step = None  # Put the best val iteration multiple of 50\n",
     "\n",
     "if best_val_step is not None:\n",
     "    agent = torch.load(\"runs/{}/agent.{}.pth\".format(exp_name, best_val_step))\n",
@@ -316,7 +316,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "for heap_size in [1, 2, 3, 5, 10, 20, 30]:\n",
+    "for heap_size in [1, 2, 3, 5, 10, 20, 30, 40, 50]:\n",
     "    algo_hnsw = lib.BaseAlgorithm(\n",
     "        agent=agent,\n",
     "        hnsw=lib.ParallelHNSW(graph, ef=heap_size, k=k, n_jobs=n_jobs),\n",
