--- a/notebooks/sift1m_experiment.ipynb
+++ b/notebooks/sift1m_experiment.ipynb
@@ -47,7 +47,7 @@
     "if not osp.exists(DATA_DIR):\n",
     "    assert not DATA_DIR.endswith(os.sep), 'please do not put \"/\" at the end of DATA_DIR'\n",
     "    !mkdir -p {DATA_DIR}\n",
-    "    !curl -L https://www.dropbox.com/sh/vw6ojdvldg3ph1k/AABp2J2_r7FajjDvnqTgGKvSa?dl=1 > {DATA_DIR}/sift_1m.zip\n",
+    "    !curl -L httphttps://www.dropbox.com/sh/noqdusnt11y6y5t/AACcl6mL5JAjZRN5AaKlta1ra?dl=1 > {DATA_DIR}/sift_1m.zip\n",
     "    !cd {DATA_DIR} && unzip sift_1m.zip && rm sift_1m.zip"
    ]
   },
