--- a/notebooks/deep1m_experiment.ipynb
+++ b/notebooks/deep1m_experiment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Similarity graph construction on DEEP100K"
+    "### Similarity graph construction on DEEP1M"
    ]
   },
   {
@@ -15,10 +15,9 @@
    "source": [
     "import os, sys\n",
     "import os.path as osp\n",
-    "%load_ext line_profiler\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%env CUDA_VISIBLE_DEVICES=1\n",
+    "%env CUDA_VISIBLE_DEVICES=0\n",
     "sys.path.append('..')\n",
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
@@ -44,13 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = './data/DEEP100K'\n",
+    "DATA_DIR = './data/DEEP1M'\n",
     "\n",
     "if not os.path.exists(DATA_DIR):\n",
     "    assert not DATA_DIR.endswith(os.sep), 'please do not put \"/\" at the end of DATA_DIR'\n",
     "    !mkdir -p {DATA_DIR}\n",
-    "    !wget https://www.dropbox.com/sh/vfnqvuk2jex4oqc/AADglx1ukHNaT3cNOVgAxMvfa?dl=1 -O {DATA_DIR}/deep_100k.zip\n",
-    "    !cd {DATA_DIR} && unzip deep_100k.zip && rm deep_100k.zip"
+    "    !curl -L  https://www.dropbox.com/sh/l2981vqyo6qejom/AABm-XWCELQ4Akzt6u0c7jdNa?dl=q > {DATA_DIR}/deep_1m.zip\n",
+    "    !cd {DATA_DIR} && unzip deep_1m.zip && rm deep_1m.zip"
    ]
   },
   {
@@ -85,26 +84,24 @@
     "# Graph params #\n",
     "################\n",
     "\n",
-    "graph_type = 'nsw'        # 'nsw' or 'nsg'\n",
-    "M = 12                    # degree parameter for NSW (Max degree is 2*M)\n",
-    "ef = 10                   # search algorithm parameter, sets the operating point\n",
-    "R = 24                    #  degree parameter for NSG (corresponds to max degree)\n",
+    "graph_type = 'nsw'        # 'hnsw', 'nsw' or 'nsg'\n",
+    "M = 14                   # degree parameter for NSW (Max degree is 2*M)\n",
+    "ef = 12                   # search algorithm parameter, sets the operating point\n",
+    "R = 16                    #  degree parameter for NSG (corresponds to max degree)\n",
     "k = 1                     # Number of answers per query. Need for Recall@k\n",
     "\n",
     "assert k <= ef\n",
     "\n",
     "nn = 200                  # Number of NN in initial KNNG that is used for NSG construction \n",
-    "efC = 300                 # efConstruction used for NSW graph\n",
-    "ngt = 100                 # Number of ground truth answers per query\n",
-    "\n",
-    "train_queries_size = 200000  # Number of training queries\n",
-    "val_queries_size = 20000     # Number of queries for validation\n",
+    "efC = 500                 # efConstruction used for NSW graph\n",
+    "ngt = 1                   # Number of ground truth answers per query\n",
+    "val_queries_size = 20000  # Number of queries for validation\n",
     "\n",
     "#################\n",
     "# Reward params #\n",
     "#################\n",
     "\n",
-    "max_dcs = 1000            # reward hyperparameter\n",
+    "max_dcs = 1500           # reward hyperparameter\n",
     "\n",
     "################\n",
     "# Agent params #\n",
@@ -116,7 +113,7 @@
     "# Algorithm params #\n",
     "####################\n",
     "\n",
-    "samples_in_batch = 85000  # Reduce for larger hidden_size to fit in GPU memory \n",
+    "samples_in_batch = 70000  # Reduce for larger hidden_size to fit in GPU memory \n",
     "Fvp_speedup = 5           # fraction of samples for Fisher vector product estimation \n",
     "                          # Reflects on the iteration time (<10 is okay)\n",
     "                          # It significantly affects training time\n",
@@ -124,19 +121,20 @@
     "Fvp_min_batches = 10      # Min number of batches used for Fvp computation \n",
     "                          # (min number of samples = Fvp_min_batches*samples_in_batch) \n",
     "                          # Can be not met when total number of samples < Fvp_min_batches*samples_in_batch\n",
-    "edge_patience = 400       # How many iterations are needed without the change of edge probability \n",
+    "                          \n",
+    "edge_patience = 50        # How many iterations are needed without the change of edge probability \n",
     "                          # to denote the prediction as confident and make it deterministic\n",
     "                          # Very important for training procedure efficiency\n",
-    "                          \n",
+    "\n",
     "Fvp_type = 'fim'          # Fisher vector product implementation: ['forward', 'fim']\n",
     "entropy_reg = 0.01        # coefficient in front of the entropy regularizer term \n",
     "batch_size = 100000       # number of sessions per batch\n",
     "\n",
     "n_jobs = 8                # Number of threads for C++ sampling\n",
-    "max_steps = 1000          # Max number of training iterations\n",
+    "max_steps = 800           # Max number of training iterations\n",
     "\n",
     "# Recover settings\n",
-    "restore_step = None       # the iteration step from which you want to recover the model "
+    "restore_step = None      # the iteration step from which you want to recover the model "
    ]
   },
   {
@@ -151,24 +149,24 @@
     "graph_params = { \n",
     "    'vertices_path': osp.join(DATA_DIR, 'deep_base.fvecs'),\n",
     "\n",
-    "    'train_queries_path': osp.join(DATA_DIR, 'deep_learn_1m.fvecs'),\n",
+    "    'train_queries_path': osp.join(DATA_DIR, 'deep_learn_filtered.fvecs'),\n",
     "    'test_queries_path': osp.join(DATA_DIR, 'deep_query.fvecs'),\n",
     "    \n",
-    "    'train_gt_path': osp.join(DATA_DIR, 'train_1m_gt.ivecs'),\n",
+    "    'train_gt_path': osp.join(DATA_DIR, 'train_gt.ivecs'),\n",
     "    'test_gt_path': osp.join(DATA_DIR, 'test_gt.ivecs'),\n",
     "#     ^-- comment these 2 lines to re-compute ground truth ids (if you don't have pre-computed ground truths)\n",
     "    \n",
-    "    'train_queries_size': train_queries_size + val_queries_size,  # valid set is a train subset\n",
     "    'val_queries_size': val_queries_size,\n",
     "    'ground_truth_n_neighbors': ngt,  # for each query, finds this many nearest neighbors via brute force\n",
     "    'graph_type': graph_type\n",
     "}\n",
     "\n",
+    "\n",
     "if graph_type == 'nsg':\n",
-    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'deep_R{R}_{nn}nn.nsg'.format(R=R, nn=nn))\n",
+    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'deep_R{R}_200nn.nsg'.format(R=R))\n",
     "elif graph_type == 'nsw':\n",
-    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'deep_nsw_M{M}_efC{efC}.ivecs'.format(M=M, efC=efC))\n",
-    "    graph_params['initial_vertex_id'] = 0  # by default, starts search from this vertex\n",
+    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'deep1m_M{M}_ef{efC}_onelevel1.ivecs'.format(M=M, efC=efC))\n",
+    "    graph_params['initial_vertex_id'] = 0 # by default, starts search from this vertex\n",
     "else:\n",
     "    raise ValueError(\"Wrong graph type: ['nsg', 'nsw']\")\n",
     "    \n",
@@ -181,20 +179,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if graph_type == 'nsw':\n",
+    "if graph_type == 'nsw' or graph_type == 'hnsw':\n",
     "    exp_name = '{data_name}_{graph_type}_k{k}_M{M}_ef{ef}_max-dcs{max_dcs}_hid-size{hidden_size}_entropy{entropy_reg}_patience{edge_patience}_seed_{seed}'.format(\n",
-    "        data_name=osp.split(DATA_DIR)[-1], k=k, M=M, ef=ef, hidden_size=hidden_size, \n",
-    "        max_dcs=max_dcs, entropy_reg=entropy_reg, graph_type=graph_type, edge_patience=edge_patience, seed=seed\n",
+    "        data_name=osp.split(DATA_DIR)[-1], k=k, M=M, ef=ef, hidden_size=hidden_size,\n",
+    "        max_dcs=max_dcs, entropy_reg=entropy_reg, graph_type=graph_type, edge_patience=edge_patience, seed=seed,\n",
     "    )\n",
     "elif graph_type == 'nsg':\n",
     "    exp_name = '{data_name}_{graph_type}_k{k}_R{R}_ef{ef}_max-dcs{max_dcs}_hid-size{hidden_size}_entropy{entropy_reg}_patience{edge_patience}_seed_{seed}'.format(\n",
     "        data_name=osp.split(DATA_DIR)[-1], k=k, R=R, ef=ef, hidden_size=hidden_size, \n",
-    "        max_dcs=max_dcs, entropy_reg=entropy_reg, graph_type=graph_type, edge_patience=edge_patience, seed=seed,\n",
+    "        max_dcs=max_dcs, entropy_reg=entropy_reg, graph_type=graph_type, edge_patience=edge_patience, seed=seed\n",
     "    )\n",
     "    \n",
     "print('exp name:', exp_name)\n",
     "# !rm {'./runs/' + exp_name} -rf # KEEP COMMENTED!\n",
-    "assert restore_step is not None or not os.path.exists('./runs/' + exp_name)"
+    "assert (restore_step is not None) or not os.path.exists('./runs/' + exp_name)"
    ]
   },
   {
@@ -237,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training loop "
+    "### Training loop"
    ]
   },
   {
@@ -271,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for batch_queries, batch_gt, batch_query_ids in train_batcher:\n",
@@ -280,15 +280,17 @@
     "    mean_reward = trainer.train_step(batch_queries, batch_gt, query_index=batch_query_ids)\n",
     "    reward_history.append(mean_reward)\n",
     "        \n",
-    "    if trainer.step % 10 == 0:\n",
+    "    if trainer.step % 25 == 0:\n",
+    "        torch.cuda.empty_cache()\n",
     "        val_reward = trainer.evaluate(*next(val_iterator), prefix='val')\n",
     "        if val_reward > best_val_reward and \\\n",
     "           trainer.step % 50 == 0 and \\\n",
-    "           trainer.step >= edge_patience:\n",
+    "           trainer.step > max_steps // 2:\n",
     "            best_val_reward = val_reward\n",
     "            best_val_step = trainer.step\n",
     "        \n",
     "    if trainer.step % 50 == 0:\n",
+    "        torch.cuda.empty_cache()\n",
     "        _ = trainer.evaluate(*next(dev_iterator))\n",
     "        print(end=\"Saving...\")\n",
     "        torch.save(agent, \"runs/{}/agent.{}.pth\".format(exp_name, trainer.step))\n",
@@ -332,6 +334,7 @@
     "from collections import defaultdict\n",
     "\n",
     "agent.cuda()\n",
+    "torch.cuda.empty_cache()\n",
     "state = agent.prepare_state(graph, device='cuda')\n",
     "\n",
     "new_edges = defaultdict(list)\n",
@@ -374,8 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hnsw.max_trajectory = 300  # Set larger number of hops allowed to the search algorithm \n",
-    "                           # to deal with large heap_sizes\n",
+    "hnsw.max_trajectory = 500  # Set larger number of hops allowed to the search algorithm \n",
+    "                          # to deal with large heap_sizes\n",
     "\n",
     "for heap_size in range(12, 121, 4):\n",
     "    algo_hnsw = lib.BaseAlgorithm(\n",
@@ -412,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
