--- a/notebooks/glove1m_experiment.ipynb
+++ b/notebooks/glove1m_experiment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Similarity graph construction on DEEP100K"
+    "### Similarity graph construction on GloVe1M"
    ]
   },
   {
@@ -44,13 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = './data/DEEP100K'\n",
+    "DATA_DIR = './data/GLOVE1M'\n",
     "\n",
     "if not os.path.exists(DATA_DIR):\n",
     "    assert not DATA_DIR.endswith(os.sep), 'please do not put \"/\" at the end of DATA_DIR'\n",
     "    !mkdir -p {DATA_DIR}\n",
-    "    !wget https://www.dropbox.com/sh/vfnqvuk2jex4oqc/AADglx1ukHNaT3cNOVgAxMvfa?dl=1 -O {DATA_DIR}/deep_100k.zip\n",
-    "    !cd {DATA_DIR} && unzip deep_100k.zip && rm deep_100k.zip"
+    "    !curl -L https://www.dropbox.com/sh/5es53chbigkaiv7/AABiIAPBAakNq0wIy4m4C97ka?dl=1 > {DATA_DIR}/glove_1m.zip\n",
+    "    !cd {DATA_DIR} && unzip glove_1m.zip && rm glove_1m.zip"
    ]
   },
   {
@@ -85,26 +85,26 @@
     "# Graph params #\n",
     "################\n",
     "\n",
-    "graph_type = 'nsw'        # 'nsw' or 'nsg'\n",
-    "M = 12                    # degree parameter for NSW (Max degree is 2*M)\n",
-    "ef = 10                   # search algorithm parameter, sets the operating point\n",
-    "R = 24                    #  degree parameter for NSG (corresponds to max degree)\n",
+    "graph_type = 'nsw'        # 'hnsw', 'nsw' or 'nsg'\n",
+    "M = 20                    # degree parameter for NSW (Max degree is 2*M)\n",
+    "ef = 5                    # search algorithm parameter, sets the operating point\n",
+    "R = 16                    #  degree parameter for NSG (corresponds to max degree)\n",
     "k = 1                     # Number of answers per query. Need for Recall@k\n",
     "\n",
     "assert k <= ef\n",
     "\n",
     "nn = 200                  # Number of NN in initial KNNG that is used for NSG construction \n",
-    "efC = 300                 # efConstruction used for NSW graph\n",
+    "efC = 2000                # efConstruction used for NSW graph\n",
     "ngt = 100                 # Number of ground truth answers per query\n",
     "\n",
-    "train_queries_size = 200000  # Number of training queries\n",
-    "val_queries_size = 20000     # Number of queries for validation\n",
+    "train_queries_size = 1000000  # Number of training queries\n",
+    "val_queries_size = 20000      # Number of queries for validation\n",
     "\n",
     "#################\n",
     "# Reward params #\n",
     "#################\n",
     "\n",
-    "max_dcs = 1000            # reward hyperparameter\n",
+    "max_dcs = 1000           # reward hyperparameter\n",
     "\n",
     "################\n",
     "# Agent params #\n",
@@ -116,7 +116,7 @@
     "# Algorithm params #\n",
     "####################\n",
     "\n",
-    "samples_in_batch = 85000  # Reduce for larger hidden_size to fit in GPU memory \n",
+    "samples_in_batch = 50000  # Reduce for larger hidden_size to fit in GPU memory \n",
     "Fvp_speedup = 5           # fraction of samples for Fisher vector product estimation \n",
     "                          # Reflects on the iteration time (<10 is okay)\n",
     "                          # It significantly affects training time\n",
@@ -124,19 +124,19 @@
     "Fvp_min_batches = 10      # Min number of batches used for Fvp computation \n",
     "                          # (min number of samples = Fvp_min_batches*samples_in_batch) \n",
     "                          # Can be not met when total number of samples < Fvp_min_batches*samples_in_batch\n",
-    "edge_patience = 400       # How many iterations are needed without the change of edge probability \n",
+    "edge_patience = 40        # How many iterations needed without the change of edge probability \n",
     "                          # to denote the prediction as confident and make it deterministic\n",
     "                          # Very important for training procedure efficiency\n",
     "                          \n",
     "Fvp_type = 'fim'          # Fisher vector product implementation: ['forward', 'fim']\n",
-    "entropy_reg = 0.01        # coefficient in front of the entropy regularizer term \n",
+    "entropy_reg = 0.001       # coefficient in front of the entropy regularizer term \n",
     "batch_size = 100000       # number of sessions per batch\n",
     "\n",
     "n_jobs = 8                # Number of threads for C++ sampling\n",
-    "max_steps = 1000          # Max number of training iterations\n",
+    "max_steps = 600           # Max number of training iterations\n",
     "\n",
     "# Recover settings\n",
-    "restore_step = None       # the iteration step from which you want to recover the model "
+    "restore_step = None         # the iteration step from which you want to recover the model "
    ]
   },
   {
@@ -149,12 +149,12 @@
     "import os.path as osp\n",
     "\n",
     "graph_params = { \n",
-    "    'vertices_path': osp.join(DATA_DIR, 'deep_base.fvecs'),\n",
+    "    'vertices_path': osp.join(DATA_DIR, 'glove_base.fvecs'),\n",
     "\n",
-    "    'train_queries_path': osp.join(DATA_DIR, 'deep_learn_1m.fvecs'),\n",
-    "    'test_queries_path': osp.join(DATA_DIR, 'deep_query.fvecs'),\n",
+    "    'train_queries_path': osp.join(DATA_DIR, 'glove_learn.fvecs'),\n",
+    "    'test_queries_path': osp.join(DATA_DIR, 'glove_query.fvecs'),\n",
     "    \n",
-    "    'train_gt_path': osp.join(DATA_DIR, 'train_1m_gt.ivecs'),\n",
+    "    'train_gt_path': osp.join(DATA_DIR, 'train_gt.ivecs'),\n",
     "    'test_gt_path': osp.join(DATA_DIR, 'test_gt.ivecs'),\n",
     "#     ^-- comment these 2 lines to re-compute ground truth ids (if you don't have pre-computed ground truths)\n",
     "    \n",
@@ -164,11 +164,12 @@
     "    'graph_type': graph_type\n",
     "}\n",
     "\n",
+    "\n",
     "if graph_type == 'nsg':\n",
-    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'deep_R{R}_{nn}nn.nsg'.format(R=R, nn=nn))\n",
+    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'sift_R{R}_200nn.nsg'.format(R=R))\n",
     "elif graph_type == 'nsw':\n",
-    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'deep_nsw_M{M}_efC{efC}.ivecs'.format(M=M, efC=efC))\n",
-    "    graph_params['initial_vertex_id'] = 0  # by default, starts search from this vertex\n",
+    "    graph_params['edges_path'] = osp.join(DATA_DIR, 'glove_nsw_M{M}_efC{efC}.ivecs'.format(M=M, efC=efC))\n",
+    "    graph_params['initial_vertex_id'] = 0 # by default, starts search from this vertex\n",
     "else:\n",
     "    raise ValueError(\"Wrong graph type: ['nsg', 'nsw']\")\n",
     "    \n",
@@ -189,7 +190,7 @@
     "elif graph_type == 'nsg':\n",
     "    exp_name = '{data_name}_{graph_type}_k{k}_R{R}_ef{ef}_max-dcs{max_dcs}_hid-size{hidden_size}_entropy{entropy_reg}_patience{edge_patience}_seed_{seed}'.format(\n",
     "        data_name=osp.split(DATA_DIR)[-1], k=k, R=R, ef=ef, hidden_size=hidden_size, \n",
-    "        max_dcs=max_dcs, entropy_reg=entropy_reg, graph_type=graph_type, edge_patience=edge_patience, seed=seed,\n",
+    "        max_dcs=max_dcs, entropy_reg=entropy_reg, graph_type=graph_type, edge_patience=edge_patience, seed=seed\n",
     "    )\n",
     "    \n",
     "print('exp name:', exp_name)\n",
@@ -210,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hnsw = lib.ParallelHNSW(graph, ef=ef, k=k, edge_patience=edge_patience, n_jobs=n_jobs)\n",
+    "hnsw = lib.ParallelHNSW(graph, ef=ef, k=k, edge_patience=edge_patience, n_jobs=n_jobs, batch_size=300000)\n",
     "\n",
     "if restore_step is not None:\n",
     "    agent = torch.load(\"runs/{}/agent.{}.pth\".format(exp_name, restore_step))\n",
@@ -237,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training loop "
+    "### Training loop"
    ]
   },
   {
@@ -279,16 +280,18 @@
     "    torch.cuda.empty_cache()\n",
     "    mean_reward = trainer.train_step(batch_queries, batch_gt, query_index=batch_query_ids)\n",
     "    reward_history.append(mean_reward)\n",
-    "        \n",
-    "    if trainer.step % 10 == 0:\n",
+    "    \n",
+    "    if trainer.step % 25 == 0:\n",
+    "        torch.cuda.empty_cache()\n",
     "        val_reward = trainer.evaluate(*next(val_iterator), prefix='val')\n",
     "        if val_reward > best_val_reward and \\\n",
     "           trainer.step % 50 == 0 and \\\n",
-    "           trainer.step >= edge_patience:\n",
+    "           trainer.step > max_steps // 2:\n",
     "            best_val_reward = val_reward\n",
     "            best_val_step = trainer.step\n",
     "        \n",
     "    if trainer.step % 50 == 0:\n",
+    "        torch.cuda.empty_cache()\n",
     "        _ = trainer.evaluate(*next(dev_iterator))\n",
     "        print(end=\"Saving...\")\n",
     "        torch.save(agent, \"runs/{}/agent.{}.pth\".format(exp_name, trainer.step))\n",
@@ -332,6 +335,7 @@
     "from collections import defaultdict\n",
     "\n",
     "agent.cuda()\n",
+    "torch.cuda.empty_cache()\n",
     "state = agent.prepare_state(graph, device='cuda')\n",
     "\n",
     "new_edges = defaultdict(list)\n",
